# IliadEngine-Vulkan

./: .gitignore  BuildSolution.bat  CMakeLists.txt  CompileShaders.bat
Assets/CompiledShaders/: pointLight.frag.spv  pointLight.vert.spv  shader.frag.spv  shader.vert.spv  texture_shader.frag.spv  texture_shader.vert.spv
Assets/Models/: quad_uw.mtl
IliadEngine/Core/: ContentLoader.cpp  ContentLoader.h  IliadGame.cpp  IliadGame.h  PointLight.cpp  PointLight.h  PointLightSystem.cpp  PointLightSystem.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  Singleton.h  Window.cpp  Window.h
IliadEngine/Graphics/: Buffer.h  Descriptors.cpp  Device.cpp  Device.h  Material.cpp  Material.h  Model.cpp  Model.h  Pipeline.cpp  SwapChain.cpp  Texture.cpp  Texture.h  TextureRenderSystem.cpp  TextureRenderSystem.h
IliadEngine/Input/: KeyboardInputMovement.cpp  KeyboardInputMovement.h
IliadEngine/SceneGraph/: BaseComponent.cpp  BaseComponent.h  Camera.cpp  GameObject.cpp  GameObject.h  ModelComponent.cpp  ModelComponent.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TextureComponent.h  TransformComponent.cpp  TransformComponent.h
IliadEngine/Shaders/: pointLight.frag  shader.frag  texture_shader.frag  texture_shader.vert
IliadEngine/Structs/: EngineContexts.h  FrameInfo.h
IliadProject/: Application.cpp
IliadProject/ProjectCore/: IliadSampleProject .h  IliadSampleProject.cpp  IliadSampleProject.h  IliadSampleScene.cpp  IliadSampleScene.h
Source/Core/: Application.cpp  Device.cpp  Device.h  FirstApp.cpp  FirstApp.h  Pipeline.cpp  Pipeline.h  PointLightSystem.cpp  PointLightSystem.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  Utils.h  Window.cpp  Window.h
Source/Graphics/: Buffer.cpp  Buffer.h  Descriptors.h  Device.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  SwapChain.cpp  SwapChain.h
Source/Input/: KeyboardInputMovement.cpp  KeyboardInputMovement.h
Source/SceneGraph/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Source/Shaders/: pointLight.frag  pointLight.vert  shader.frag  shader.vert
Source/Structs/: FrameInfo.h
